# DDASToys

./: .gitignore  .gitmodules  Asserts.h  CFitEngine.cpp  CFitEngine.h  CMakeLists.txt  CRingItemProcessor.cpp  CRingItemProcessor.h  Configuration.cpp  Configuration.h  CudaFitEngineAnalytic.cu  DDASFitHit.h  DDASFitHitUnpacker.cpp  DDASFitHitUnpacker.h  FitEditorAnalytic.cpp  FitEditorAnalytic.h  FitEditorMLInference.cpp  FitEditorMLInference.h  FitEditorTemplate.cpp  FitEditorTemplate.h  Makefile  README.md  SerialFitEngineAnalytic.cpp  TestRunner.cpp  configurationtests.cpp  cudafit_analytic.cu  cudafit_analytic.cuh  fit_extensions.h  fit_extensions_legacy.h  fithittests.cpp  fitunpackertests.cpp  functions_analytic.cpp  functions_analytic.h  functions_template.cpp  functions_template.h  jacobian_analytic.h  lmfit_analytic.cpp  lmfit_analytic.h  lmfit_template.cpp  lmfit_template.h  (+5 more)
Docs/: Doxyfile  DoxygenLayout.xml  Makefile  manual.xml
EEConverter/: CEventProcessor.cpp  CEventProcessor.h  DDASRootFitClasses.cpp  DDASRootFitEvent.cpp  DDASRootFitEvent.h  DDASRootFitFormat.cpp  DDASRootFitHit.cpp  DDASRootFitHit.h  DataSource.cpp  DataSource.h  LinkDef.h  Makefile  ProcessToRootSink.cpp  ProcessToRootSink.h  RootExtensions.cpp  RootExtensions.h  RootFileDataSink.cpp  RootFileDataSink.h  RootSinkProcessor.cpp  RootSinkProcessor.h  StreamDataSource.cpp  StreamDataSource.h  StringsToIntegers.cpp  StringsToIntegers.h  converterargs.ggo  eeconverter.cpp
TraceView/: DDASDecoder.cpp  DDASDecoder.h  DDASRingItemProcessor.h  FitManager.cpp  FitManager.h  Makefile  QHitData.cpp  QHitData.h  QRootCanvas.cpp  QRootCanvas.h  QTraceView.cpp  QTraceView.h  TraceViewProcessor.cpp  TraceViewProcessor.h  traceview.cpp  traceview.pro
main/mpifit/: AREADME.txt  CFitEditor.cpp  CFitEditor.h  CFitEngine.cpp  CFitEngine.h  CFitExtender.cpp  CFitExtender.h  Configuration.cpp  Configuration.h  CudaFitEngine.cu  CudaFitEngineAnalytic.cu  DDASFitHit.h  DDASFitHitUnpacker.cpp  DDASFitHitUnpacker.h  DDASToys.xml  (+46 more)
(+122 files in other folders)
